--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -28,13 +28,13 @@
 	</head>
 	<body>
 
-    <div class="wrapper">
-        <div class="content">
+    <div class="wrapper-landing">
+        <div class="content-landing">
             <!-- {{ URL::asset('images/logo.svg') }} -->
             <!-- {{ env('SITE_NAME') }}logo -->
             <img src="../assets/logo.png" alt="WTF Trade logo" class="logo">
             <!-- {{ url('/login') }} -->
-            <a href="" id="loginButton" class="button-block">Sign in with steam</a>
+            <a href="../index.html" id="loginButton" class="button-block">Sign in with steam</a>
             <div class="perks">
                 By signing in with Steam you agree that you have read and accept our
                 <a target="_blank" href="/terms-of-use">Terms of Usage</a>
