--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
         -->
 
   <!-- {{ asset('logomark.png') }} -->
-  <link rel="icon" type="image/png" href="../assets/logo.png">
-  <link rel="shortcut icon" type="image/png" href="../assets/logo.png">
+  <link rel="icon" type="image/png" href="../assets/Logo.png">
+  <link rel="shortcut icon" type="image/png" href="../assets/Logo.png">
   <link href="https://file.myfontastic.com/4BEbcY5D6pPKiDBjhJBMZ4/icons.css" rel="stylesheet">
   <!-- {{ URL::asset('landing/css/style.css') }} -->
   <link href="../../dist/css/app.min.css" rel="stylesheet" type="text/css" />
@@ -30,7 +30,7 @@
 <body>
   <nav>
     <!-- Logo -->
-    <a href="#"><img src="assets/logo.png" alt="">Best trading & gambling site!</a>
+    <a href="#"><img src="assets/Logo.png" alt="">Best trading & gambling site!</a>
     <ul class="links">
       <li><a href="#">Trade</a></li>
       <li><a href="#">Support</a></li>
