--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -19,8 +19,8 @@
         -->
 
         <!-- {{ asset('logomark.png') }} -->
-        <link rel="icon" type="image/png" href="../assets/logo.png">
-        <link rel="shortcut icon" type="image/png" href="../assets/logo.png">
+        <link rel="icon" type="image/png" href="../assets/Logo.png">
+        <link rel="shortcut icon" type="image/png" href="../assets/Logo.png">
 
         <!-- Stlylesheet -->
         <!-- {{ URL::asset('landing/css/style.css') }} -->
@@ -30,9 +30,9 @@
 
     <div class="wrapper-landing">
         <div class="content-landing">
-            <!-- {{ URL::asset('images/logo.svg') }} -->
-            <!-- {{ env('SITE_NAME') }}logo -->
-            <img src="../assets/logo.png" alt="WTF Trade logo" class="logo">
+            <!-- {{ URL::asset('images/Logo.svg') }} -->
+            <!-- {{ env('SITE_NAME') }}Logo -->
+            <img src="../assets/Logo.png" alt="WTF Trade Logo" class="logo">
             <!-- {{ url('/login') }} -->
             <a href="../index.html" id="loginButton" class="button-block">Sign in with steam</a>
             <div class="perks">
