--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <link rel="shortcut icon" type="image/png" href="../assets/Logo.png">
   <link href="https://file.myfontastic.com/4BEbcY5D6pPKiDBjhJBMZ4/icons.css" rel="stylesheet">
   <!-- {{ URL::asset('landing/css/style.css') }} -->
-  <link href="../../dist/css/app.min.css" rel="stylesheet" type="text/css" />
+  <link href="css/app.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
