--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -24,7 +24,7 @@
 
         <!-- Stlylesheet -->
         <!-- {{ URL::asset('landing/css/style.css') }} -->
-        <link href="../../dist/css/app.min.css" rel="stylesheet" type="text/css" />    
+        <link href="../css/app.css" rel="stylesheet" type="text/css" />    
 	</head>
 	<body>
 
