--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
   <link href="https://file.myfontastic.com/4BEbcY5D6pPKiDBjhJBMZ4/icons.css" rel="stylesheet">
   <!-- {{ URL::asset('landing/css/style.css') }} -->
   <link href="css/app.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/png" href="assets/Logo.png">
+  <link rel="shortcut icon" type="image/png" href="assets/Logo.png">
 </head>
 
 <body>
