--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,21 @@
       </div>
       <div class="bottom">
         <div class="controls">
+          <div class="user">
+            <img src="assets/avatar.png" alt="USERNAME HERE">
+            <h2>Criminal Juan</h2>
+          </div>
+
+        <div>
+          <div class="search">
+            <input type="text" placeholder="Search">
+            <i class="icon-search"></i>
+          </div>
+          <select>
+            <option value="1">From High To Low</option>
+            <option value="1">From Low To High</option>
+          </select>
+        </div>
         </div>
       </div>
     </section>
@@ -218,6 +233,20 @@
       </div>
       <div class="bottom">
         <div class="controls">
+          <div class="user">
+            <img src="assets/Logo.png" alt="USERNAME HERE">
+            <h2>Bot Inventory</h2>
+          </div>
+        <div>
+          <div class="search">
+            <input type="text" placeholder="Search">
+            <i class="icon-search"></i>
+          </div>
+          <select>
+            <option value="1">From High To Low</option>
+            <option value="1">From Low To High</option>
+          </select>
+        </div>
         </div>
       </div>
     </section>
