--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,16 @@
           <span>$0.00</span>
           <a href="#" class="button">Deposit</a>
         </div>
+        <div class="items">
+          <div class="item border-secondary">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+        </div>
       </div>
       <div class="bottom">
         <div class="controls">
@@ -92,6 +102,16 @@
             <option value="1">From Low To High</option>
           </select>
         </div>
+        </div>
+        <div class="items">
+          <div class="item border-secondary">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
         </div>
       </div>
     </section>
@@ -230,6 +250,16 @@
           <span>$0.00</span>
           <a href="#" class="button">Withdraw</a>
         </div>
+        <div class="items">
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/glock.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+        </div>
       </div>
       <div class="bottom">
         <div class="controls">
@@ -247,6 +277,80 @@
             <option value="1">From Low To High</option>
           </select>
         </div>
+        </div>
+        <div class="items">
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/m9.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/Logo.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
         </div>
       </div>
     </section>
