--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -154,6 +154,9 @@
     </main>
   </div>
   <script>
+      const toggle = document.querySelector('#toggle')
+      const nav = document.querySelector('nav')
+
     const settings = document.querySelector('#settings') // navbar ul button
     const settingsPopUp = document.querySelector('#settingsPopUp')
     const settingsCloseBtn = document.querySelector('#closeSettingsPopUp')
@@ -162,6 +165,12 @@
     const alertCloseBtn = document.querySelector('#alertClose')
 
     const wrapper = document.querySelector('.main-wrapper')
+
+      /*** TOGGLE ***/
+      toggle.addEventListener('click', () => {
+        nav.classList.toggle('nav-active')
+      })
+
 
     /*** ALERT ***/
     /**
